--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
             </div>
         </div> 
     </header>
-    <body>
-        <div class="header_image" id="header_homepage">
-            <div class="header_text">
+    <main>
+        <section class="header_image" id="header_homepage">
+            <div class="header_text_h">
                 <h1>Community Science Museum</h1>
-                <div class="headerline"></div>
                 <p class="header_p">Explore Together</p>
             </div>
-        </div>
+        </section>
         <div class="section_buttons">
             <div class="info_box">
                 <div class="header_titlebox b_green I_height"><img src="/Icons/I_info.svg" alt="Icon of an I for information"></div>
@@ -77,23 +76,107 @@
                     <p>Energetica Exhibition on Loan</p>
                 </div>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html" class="button b_green">Find out more</a></div>
+            <div class="space"><a href="/events_and_exhibits.html#h_s_news" class="button b_green">Find out more</a></div>
         </section>
         <section class="h_s_explore">
             <h2 class="header_titlebox b_blue">Explore</h2>
             <div class="grid3 content_wrap">
-                <div class="explore_box">
+                <a href="/visit_us.html" class="explore_box">
                     <h3 class="button gray explore_text">For Kids</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
-                </div>
-            
+                </a>
+                <a href="/visit_us.html" class="explore_box">
+                    <h3 class="button gray explore_text">For Teachers</h3>
+                    <figure class="black_square"></figure>
+                    <div class="product_img"><img src="/images/learning.png" alt="Image of a kid and a teacher"></div>
+                </a>
+                <a href="/visit_us.html" class="explore_box">
+                    <h3 class="button gray explore_text">Researchers</h3>
+                    <figure class="black_square"></figure>
+                    <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt="Image of a Researcher"></div>
+                </a>
             </div>
             <div class="space"><a href="/events_and_exhibits.html" class="button b_blue">Find out more</a></div>
         </section>
-    </body>
+        <section class="h_s_exhibition_s dark_background">
+            <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
+            <div class="grid3 content_wrap">
+                <a href="/events_and_exhibits.html" class="productbox">
+                    <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
+                    <p class="text_white">Cosmology</p>
+                </a>
+                <a href="/events_and_exhibits.html" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203024.png" alt="The moon image"></div>
+                    <p class="text_white">Evolution</p>
+                </a>
+                <a href="/events_and_exhibits.html" class="productbox">
+                    <div class="product_img"><img src="images/heart-2607178_1920.jpg" alt="Visiting Professor of Aeronautics image"></div>
+                    <p class="text_white">Biology and Medicine</p>
+                </a>
+                <a href="/events_and_exhibits.html" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203232.png" alt="Night in the Museum image"></div>
+                    <p class="text_white">Robotics and AI</p>
+                </a>
+                <a href="/events_and_exhibits.html" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203354.png" alt="Visiting Professor of Aeronautics image"></div>
+                    <p class="text_white">Ecology</p>
+                </a>
+            </div>
+            <div class="space"><a href="/events_and_exhibits.html#ee_exhibits" class="button b_green">Find out more</a></div>
+        </section>
+    </main>
     <footer>
-
+        <div class="f_boxes">
+            <div class="f_boxes_f">
+                <div class="csm_i">
+                    <p>Community Science Museum</p>
+                    <p>Verket 1 2580 Folldal</p>
+                </div>
+                <div class="open_hours">
+                    <p class="bold">Opening hours:</p>
+                    <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
+                    <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                    <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                    <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                    <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
+                    <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
+                    <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
+                </div>  
+            </div>
+            <div class="f_boxes_f">
+                <div class="contact_us"><p class="bold">Contact us:</p>
+                    <p class="item">Phone: +47 38373635</p>
+                    <p class="item">E-mail: CSMuseum@museum.com</p>
+                </div>
+                <div class="social_media">
+                    <a href="/"><figure class="instagram image"></figure></a>
+                    <a href="/"><figure class="facebook image"></figure></a>
+                </div>
+            </div>
+            <div class="f_boxes_f links">
+                <a href=""><p class="item"></p>Events and Exhibits</p></a>
+                <a href=""><p class="item"></p>Get involed</p></a>
+                <a href=""><p class="item"></p>Explore</p></a>
+                <a href=""><p class="item"></p>Prices</p></a>
+                <a href=""><p class="item"></p>Accessibility</p></a>
+                <a href=""><p class="item"></p>Shop</p></a>
+                <a href=""><p class="item"></p>Food and drink</p></a>   
+            </div>
+            <div class="f_boxes_f">
+                <form action="post" class="center_n">
+                    <div class="newsletter">
+                        <legend>Subscribe to our newsletter</legend>
+                        <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
+                        <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
+                        <div>
+                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
+                        </div>
+                    </div>
+                    <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
