--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -131,6 +131,7 @@
         </section>  
     </main>
     <footer>
+        <div  class="content_wrap">
         <div class="f_boxes">
             <div class="f_boxes_f">
                 <div class="csm_i">
@@ -180,6 +181,7 @@
                     <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
                 </form>
             </div>
+        </div>
         </div>
     </footer>
 </body>
