--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <section class="header_image" id="header_homepage">
             <div class="header_text_h">
                 <h1>Community Science Museum</h1>
-                <p class="header_p">Explore Together</p>
+                <div class="headerline"></div>
+                <p class="header_p text_white">Explore Together</p>
             </div>
         </section>
         <div class="section_buttons">
@@ -127,54 +128,56 @@
         </section>
     </main>
     <footer>
-        <div class="f_boxes">
-            <div class="f_boxes_f">
-                <div class="csm_i">
-                    <p>Community Science Museum</p>
-                    <p>Verket 1 2580 Folldal</p>
-                </div>
-                <div class="open_hours">
-                    <p class="bold">Opening hours:</p>
-                    <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
-                    <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
-                    <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
-                </div>  
-            </div>
-            <div class="f_boxes_f">
-                <div class="contact_us"><p class="bold">Contact us:</p>
-                    <p class="item">Phone: +47 38373635</p>
-                    <p class="item">E-mail: CSMuseum@museum.com</p>
-                </div>
-                <div class="social_media">
-                    <a href="/"><figure class="instagram image"></figure></a>
-                    <a href="/"><figure class="facebook image"></figure></a>
-                </div>
-            </div>
-            <div class="f_boxes_f links">
-                <a href=""><p class="item"></p>Events and Exhibits</p></a>
-                <a href=""><p class="item"></p>Get involed</p></a>
-                <a href=""><p class="item"></p>Explore</p></a>
-                <a href=""><p class="item"></p>Prices</p></a>
-                <a href=""><p class="item"></p>Accessibility</p></a>
-                <a href=""><p class="item"></p>Shop</p></a>
-                <a href=""><p class="item"></p>Food and drink</p></a>   
-            </div>
-            <div class="f_boxes_f">
-                <form action="post" class="center_n">
-                    <div class="newsletter">
-                        <legend>Subscribe to our newsletter</legend>
-                        <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                        <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
-                        <div>
-                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
-                        </div>
+        <div  class="content_wrap">
+            <div class="f_boxes">
+                <div class="f_boxes_f">
+                    <div class="csm_i">
+                        <p>Community Science Museum</p>
+                        <p>Verket 1 2580 Folldal</p>
                     </div>
-                    <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
-                </form>
+                    <div class="open_hours">
+                        <p class="bold">Opening hours:</p>
+                        <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
+                        <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
+                        <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
+                    </div>  
+                </div>
+                <div class="f_boxes_f">
+                    <div class="contact_us"><p class="bold">Contact us:</p>
+                        <p class="item">Phone: +47 38373635</p>
+                        <p class="item">E-mail: CSMuseum@museum.com</p>
+                    </div>
+                    <div class="social_media">
+                        <a href="/"><figure class="instagram image"></figure></a>
+                        <a href="/"><figure class="facebook image"></figure></a>
+                    </div>
+                </div>
+                <div class="f_boxes_f links">
+                    <a href=""><p class="item"></p>Events and Exhibits</p></a>
+                    <a href=""><p class="item"></p>Get involed</p></a>
+                    <a href=""><p class="item"></p>Explore</p></a>
+                    <a href=""><p class="item"></p>Prices</p></a>
+                    <a href=""><p class="item"></p>Accessibility</p></a>
+                    <a href=""><p class="item"></p>Shop</p></a>
+                    <a href=""><p class="item"></p>Food and drink</p></a>   
+                </div>
+                <div class="f_boxes_f">
+                    <form action="post" class="center_n">
+                        <div class="newsletter">
+                            <legend>Subscribe to our newsletter</legend>
+                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
+                            <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
+                            <div>
+                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
+                            </div>
+                        </div>
+                        <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
+                    </form>
+                </div>
             </div>
         </div>
     </footer>
