--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </div>
         <div class="dark_background">
-            <div class="content_wrap h_section2">
+            <div class="content_wrap h_section2 section_padding">
                 <figure class="child_painting"></figure>
                 <div class="h_section2_info">
                     <p class="text_white">Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
@@ -61,9 +61,9 @@
                 <figure class="human_body"></figure>
             </div>
         </div>
-        <section class="h_s_news">
+        <section class="h_s_news section_padding">
             <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
-            <div class="grid3 content_wrap">
+            <div class="grid3fit  content_wrap">
                 <div class="productbox">
                     <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image"></div>
                     <p>Visiting Professor of Aeronautics</p>
@@ -79,30 +79,30 @@
             </div>
             <div class="space"><a href="/events_and_exhibits.html#h_s_news" class="button b_green">Find out more</a></div>
         </section>
-        <section class="h_s_explore">
-            <h2 class="header_titlebox b_blue">Explore</h2>
-            <div class="grid3 content_wrap">
+        <section class="h_s_explore section_padding">
+            <h2 class="header_titlebox b_blue ">Explore</h2>
+            <div class="grid3fit  content_wrap">
                 <a href="/visit_us.html" class="explore_box">
-                    <h3 class="button gray explore_text">For Kids</h3>
+                    <h3 class="button gray explore_text text_black">For Kids</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
                 </a>
                 <a href="/visit_us.html" class="explore_box">
-                    <h3 class="button gray explore_text">For Teachers</h3>
+                    <h3 class="button gray explore_text text_black">For Teachers</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/learning.png" alt="Image of a kid and a teacher"></div>
                 </a>
                 <a href="/visit_us.html" class="explore_box">
-                    <h3 class="button gray explore_text">Researchers</h3>
+                    <h3 class="button gray explore_text text_black">Researchers</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt="Image of a Researcher"></div>
                 </a>
             </div>
             <div class="space"><a href="/events_and_exhibits.html" class="button b_blue">Find out more</a></div>
         </section>
-        <section class="h_s_exhibition_s dark_background">
+        <section class="h_s_exhibition_s dark_background section_padding">
             <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
-            <div class="grid3 content_wrap">
+            <div class="grid3fit  content_wrap">
                 <a href="/events_and_exhibits.html" class="productbox">
                     <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
                     <p class="text_white">Cosmology</p>
@@ -156,14 +156,14 @@
                         <a href="/"><figure class="facebook image"></figure></a>
                     </div>
                 </div>
-                <div class="f_boxes_f links">
-                    <a href=""><p class="item"></p>Events and Exhibits</p></a>
-                    <a href=""><p class="item"></p>Get involed</p></a>
-                    <a href=""><p class="item"></p>Explore</p></a>
-                    <a href=""><p class="item"></p>Prices</p></a>
-                    <a href=""><p class="item"></p>Accessibility</p></a>
-                    <a href=""><p class="item"></p>Shop</p></a>
-                    <a href=""><p class="item"></p>Food and drink</p></a>   
+                <div class="f_boxes_f links links_f">
+                    <a href=""><p class="item">Events and Exhibits</p></a>
+                    <a href=""><p class="item">Get involed</p></a>
+                    <a href=""><p class="item">Explore</p></a>
+                    <a href=""><p class="item">Prices</p></a>
+                    <a href=""><p class="item">Accessibility</p></a>
+                    <a href=""><p class="item">Shop</p></a>
+                    <a href=""><p class="item">Food and drink</p></a>   
                 </div>
                 <div class="f_boxes_f">
                     <form action="post" class="center_n">
