--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Community Science Museum - Home</title>
+    <title>Community Science Museum - Events and Exhibition</title>
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -38,9 +38,9 @@
                 <h1>Events and Exhibits</h1>
             </div>
         </section>
-        <section class="h_s_news" id="h_s_news">
+        <section class="h_s_news section_padding" id="h_s_news">
             <h2 class="header_titlebox b_green">News</h2>
-            <div class="grid3 content_wrap">
+            <div class="grid3fit  content_wrap">
                 <div class="newsbox">
                     <p class="title">Visiting Professor of Aeronautics</p>
                     <p>It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of and where the future lies in this exciting ‘space’.</p>
@@ -68,9 +68,9 @@
                 </div>
             </div>
         </section>
-        <section class="h_s_news" id="ee_exhibits">
+        <section class="h_s_news section_padding" id="ee_exhibits">
             <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
-            <div class="grid3 content_wrap">
+            <div class="grid3fit  content_wrap">
                 <div class="exhibitbox">
                     <div class="remarea">
                         <h3 class="title">Cosmology</h3>
@@ -132,56 +132,57 @@
     </main>
     <footer>
         <div  class="content_wrap">
-        <div class="f_boxes">
-            <div class="f_boxes_f">
-                <div class="csm_i">
-                    <p>Community Science Museum</p>
-                    <p>Verket 1 2580 Folldal</p>
-                </div>
-                <div class="open_hours">
-                    <p class="bold">Opening hours:</p>
-                    <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
-                    <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
-                    <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
-                    <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
-                </div>  
-            </div>
-            <div class="f_boxes_f">
-                <div class="contact_us"><p class="bold">Contact us:</p>
-                    <p class="item">Phone: +47 38373635</p>
-                    <p class="item">E-mail: CSMuseum@museum.com</p>
-                </div>
-                <div class="social_media">
-                    <a href="/"><figure class="instagram image"></figure></a>
-                    <a href="/"><figure class="facebook image"></figure></a>
-                </div>
-            </div>
-            <div class="f_boxes_f links">
-                <a href=""><p class="item"></p>Events and Exhibits</p></a>
-                <a href=""><p class="item"></p>Get involed</p></a>
-                <a href=""><p class="item"></p>Explore</p></a>
-                <a href=""><p class="item"></p>Prices</p></a>
-                <a href=""><p class="item"></p>Accessibility</p></a>
-                <a href=""><p class="item"></p>Shop</p></a>
-                <a href=""><p class="item"></p>Food and drink</p></a>   
-            </div>
-            <div class="f_boxes_f">
-                <form action="post" class="center_n">
-                    <div class="newsletter">
-                        <legend>Subscribe to our newsletter</legend>
-                        <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                        <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
-                        <div>
-                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
-                        </div>
+            <div class="f_boxes">
+                <div class="f_boxes_f">
+                    <div class="csm_i">
+                        <p>Community Science Museum</p>
+                        <p>Verket 1 2580 Folldal</p>
                     </div>
-                    <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
-                </form>
+                    <div class="open_hours">
+                        <p class="bold">Opening hours:</p>
+                        <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
+                        <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
+                        <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
+                        <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
+                    </div>  
+                </div>
+                <div class="f_boxes_f">
+                    <div class="contact_us"><p class="bold">Contact us:</p>
+                        <p class="item">Phone: +47 38373635</p>
+                        <p class="item">E-mail: CSMuseum@museum.com</p>
+                    </div>
+                    <div class="social_media">
+                        <a href="/"><figure class="instagram image"></figure></a>
+                        <a href="/"><figure class="facebook image"></figure></a>
+                    </div>
+                </div>
+                <div class="f_boxes_f links links_f">
+                    <a href=""><p class="item">Events and Exhibits</p></a>
+                    <a href=""><p class="item">Get involed</p></a>
+                    <a href=""><p class="item">Explore</p></a>
+                    <a href=""><p class="item">Prices</p></a>
+                    <a href=""><p class="item">Accessibility</p></a>
+                    <a href=""><p class="item">Shop</p></a>
+                    <a href=""><p class="item">Food and drink</p></a>   
+                </div>
+                <div class="f_boxes_f">
+                    <form action="post" class="center_n">
+                        <div class="newsletter">
+                            <legend>Subscribe to our newsletter</legend>
+                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
+                            <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
+                            <div>
+                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
+                            </div>
+                        </div>
+                        <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
+                    </form>
+                </div>
             </div>
-        </div>
         </div>
     </footer>
 </body>
+</html>
