--- a/information.html
+++ b/information.html
@@ -160,7 +160,7 @@
             </div>
         </div>
         <section class="section_padding">
-            <h2 class="header_titlebox b_blue ">Get involed</h2>
+            <h2 class="header_titlebox b_green ">Get involed</h2>
             <div class="grid3fit content_wrap">
                 <div>
                     <h3 class="green_underline w_100">Support</h3>
