made it responsive

--- a/visit_us.html
+++ b/visit_us.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="sticky_header">
-        <div class="header_logo"></div>
+        <a href="/index.html" class="header_logo"></a>
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
             <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
@@ -43,7 +43,7 @@
             </div>
         </section>
         <section class="section_padding content_wrap padding-top2rem">
-            <div class="flex padding1rem">
+            <div class="grid3fit gridcenter padding1rem">
                 <div>
                     <div class="padding1rem csm_spes">
                         <h2>Community Science Museum</h2>
@@ -111,7 +111,7 @@
                 </div>
                 <div class="boxmargin white_background padding1rem visit_g_two">
                     <div class="info_img science_img">
-                        <img class="images" src="images/scientific-2040795_1280.jpg" alt="Image from a store">
+                        <img class="images" src="images/scientific-2040795_1280.jpg" alt="scientist">
                     </div>
                 </div>
                 <div class="boxmargin white_background padding1rem visit_g_three">
@@ -127,14 +127,14 @@
                     </div>
                 </div>
                 <div class="boxmargin padding1rem visit_g_four">
-                    <div class="button b_green visit_g_four_spes">More information</div>
+                    <a href="/information.html" class="button b_green visit_g_four_spes">More information</a>
                 </div>
             </div>
         </div>
-        <section class="visitus_page section_padding">
-            <h2 class="header_titlebox b_green">Explore</h2>
+        <section class="visitus_page section_padding" id="explore_section">
+            <h2 class="header_titlebox b_blue">Explore</h2>
             <div class="gridefit content_wrap">
-                <div class="eplore_spes flex">
+                <div class="eplore_spes flex_spacebetween" id="for_kids">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Kids</h3>
                         <figure class="black_square"></figure>
@@ -147,7 +147,7 @@
                         <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.</p>
                     </div>
                 </div>
-                <div class="eplore_spes flex padding-top2rem">
+                <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_teachers">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Teachers</h3>
                         <figure class="black_square"></figure>
@@ -159,7 +159,7 @@
                         <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
                     </div>
                 </div>
-                <div class="eplore_spes flex padding-top2rem">
+                <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_reserchers">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">Researchers</h3>
                         <figure class="black_square"></figure>
@@ -174,7 +174,7 @@
             </div>
         </section>
         <section class="section_padding">
-            <h2 class="header_titlebox b_blue ">Get involed</h2>
+            <h2 class="header_titlebox b_green ">Get involed</h2>
             <div class="grid3fit content_wrap">
                 <div>
                     <h3 class="green_underline w_100">Support</h3>
@@ -210,7 +210,7 @@
     </main>
     <footer>
         <div class="content_wrap">
-            <div class="f_boxes">
+            <div class="grid3fit">
                 <div class="f_boxes_f">
                     <div class="csm_i">
                         <p>Community Science Museum</p>
