--- a/about_us.html
+++ b/about_us.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="sticky_header">
-        <div class="header_logo"></div>
+        <a href="/index.html" class="header_logo"></a>
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
             <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
@@ -43,15 +43,15 @@
             </div>
         </section>
         <section class="section_padding content_wrap padding-top2rem">
-            <div class="grid3fit padding1rem about_us_flex">
-                <div class="about_us_text about_us_flex1">
+            <div class="grid3fit padding1rem gridcenter flexcenter">
+                <div class="about_us_text flexcenter1">
                     <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
                     <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
                     <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
                 </div>
                 <div>
-                    <div class="info_img about_us_flex1">
-                        <img class="images" src="images/museum_hall.png" alt="Image from inside a museum">
+                    <div class="info_img flexcenter1">
+                        <img class="images" src="images/exhibition-1863344_1920.jpg" alt="Image from inside a museum">
                     </div>
                 </div>
             </div>
@@ -70,7 +70,7 @@
     </main>
     <footer>
         <div class="content_wrap">
-            <div class="f_boxes">
+            <div class="grid3fit">
                 <div class="f_boxes_f">
                     <div class="csm_i">
                         <p>Community Science Museum</p>
