--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community Science Museum - Home</title>
     <link rel="stylesheet" href="global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Dosis:wght@200;300;400;500;600;700;800&family=Epilogue:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header class="sticky_header">
-        <div class="header_logo"></div>
-            <div class="floating_nav">   
-                <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
-                <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
-                <nav class="nav_right">
-                    <ul>
-                        <li><a href="/index.html" class="active_page">Home</a></li>
-                        <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
-                        <li><a href="/information.html">Information</a></li>
-                        <li><a href="/visit_us.html">Visit us</a></li>
-                        <li><a href="/about_us.html">About us</a></li>
-                        <li><a href="/contact_us.html">Contact us</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div> 
+        <a href="/index.html" class="header_logo"></a>
+        <div class="floating_nav">
+            <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
+            <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
+            <nav class="nav_right">
+                <ul>
+                    <li><a href="/index.html" class="active_page">Home</a></li>
+                    <li><a href="/events_and_exhibits.html">Events and Exhibits</a></li>
+                    <li><a href="/information.html">Information</a></li>
+                    <li><a href="/visit_us.html">Visit us</a></li>
+                    <li><a href="/about_us.html">About us</a></li>
+                    <li><a href="/contact_us.html">Contact us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <section class="header_image" id="header_homepage">
             <div class="header_text_h">
-                <h1>Community Science Museum</h1>
+                <h1>Community<br>Science Museum</h1>
                 <div class="headerline"></div>
                 <p class="header_p text_white">Explore Together</p>
             </div>
         </section>
         <div class="section_buttons">
             <div class="info_box">
-                <div class="header_titlebox b_green I_height"><img src="/Icons/I_info.svg" alt="Icon of an I for information"></div>
+                <div class="header_titlebox b_green I_height"><img src="/Icons/I_info.svg"
+                        alt="Icon of an I for information"></div>
                 <div class="triangle"></div>
             </div>
             <div class="triobuttons">
@@ -55,81 +59,98 @@
             <div class="content_wrap h_section2 section_padding">
                 <figure class="child_painting"></figure>
                 <div class="h_section2_info">
-                    <p class="text_white">Come join us at the Community Science Museum where we’re committed to making science accessible to all.</p>
+                    <p class="text_white">Come join us at the Community Science Museum where we’re committed to making
+                        science accessible to all.</p>
                     <a href="/about_us.html" class="button b_blue">Learn more about us</a>
                 </div>
                 <figure class="human_body"></figure>
             </div>
         </div>
         <section class="h_s_news section_padding">
-            <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
+            <a href="/events_and_exhibits.html#news_section">
+                <h2 class="header_titlebox b_green">News - Special Events & Exhibitions</h2>
+            </a>
             <div class="grid3fit  content_wrap">
-                <div class="productbox">
-                    <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image"></div>
+                <a href="/events_and_exhibits.html#Professor_of_aeronautics" class="productbox text_black">
+                    <div class="product_img"><img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
+                    </div>
                     <p>Visiting Professor of Aeronautics</p>
-                </div>
-                <div class="productbox">
-                    <div class="product_img"><img src="images/roberto-nickson-396152.jpg" alt="Night in the Museum image"></div>
+                </a>
+                <a href="/events_and_exhibits.html#night_in_the_museum" class="productbox text_black">
+                    <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
+                            alt="Night in the Museum image"></div>
                     <p>Night in the Museum</p>
-                </div>
-                <div class="productbox">
-                    <div class="product_img"><img src="images/lightenergy.png" alt="Visiting Professor of Aeronautics image"></div>
+                </a>
+                <a href="/events_and_exhibits.html#Energetica_exhibition_on_loan" class="productbox text_black">
+                    <div class="product_img"><img src="images/lightenergy.png"
+                            alt="Visiting Professor of Aeronautics image"></div>
                     <p>Energetica Exhibition on Loan</p>
-                </div>
+                </a>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html#h_s_news" class="button b_green">Find out more</a></div>
+            <div class="space"><a href="/events_and_exhibits.html#news_section" class="button b_green">Find out more</a>
+            </div>
         </section>
         <section class="h_s_explore section_padding">
-            <h2 class="header_titlebox b_blue ">Explore</h2>
+            <a href="/visit_us.html#explore_section">
+                <h2 class="header_titlebox b_blue ">Explore</h2>
+            </a>
             <div class="grid3fit  content_wrap">
-                <a href="/visit_us.html" class="explore_box">
+                <a href="/visit_us.html#for_kids" class="explore_box">
                     <h3 class="button gray explore_text text_black">For Kids</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
                 </a>
-                <a href="/visit_us.html" class="explore_box">
+                <a href="/visit_us.html#for_teachers" class="explore_box">
                     <h3 class="button gray explore_text text_black">For Teachers</h3>
                     <figure class="black_square"></figure>
                     <div class="product_img"><img src="/images/learning.png" alt="Image of a kid and a teacher"></div>
                 </a>
-                <a href="/visit_us.html" class="explore_box">
+                <a href="/visit_us.html#for_reserchers" class="explore_box">
                     <h3 class="button gray explore_text text_black">Researchers</h3>
                     <figure class="black_square"></figure>
-                    <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt="Image of a Researcher"></div>
+                    <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt=" Image of a Researcher">
+                    </div>
                 </a>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html" class="button b_blue">Find out more</a></div>
+            <div class="space"><a href="/visit_us.html#explore_section" class="button b_blue">Find out more</a></div>
         </section>
         <section class="h_s_exhibition_s dark_background section_padding">
-            <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
+            <a href="/events_and_exhibits.html#exhibition_spaces">
+                <h2 class="header_titlebox b_green">Exhibition Spaces</h2>
+            </a>
             <div class="grid3fit  content_wrap">
-                <a href="/events_and_exhibits.html" class="productbox">
+                <a href="/events_and_exhibits.html#cosmology" class="productbox">
                     <div class="product_img"><img src="images/celso-405219.jpg" alt="The moon image"></div>
                     <p class="text_white">Cosmology</p>
                 </a>
-                <a href="/events_and_exhibits.html" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203024.png" alt="The moon image"></div>
+                <a href="/events_and_exhibits.html#evolution" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203024.png" alt="Image of people">
+                    </div>
                     <p class="text_white">Evolution</p>
                 </a>
-                <a href="/events_and_exhibits.html" class="productbox">
-                    <div class="product_img"><img src="images/heart-2607178_1920.jpg" alt="Visiting Professor of Aeronautics image"></div>
+                <a href="/events_and_exhibits.html#biology_and_medicine" class="productbox">
+                    <div class="product_img"><img src="images/heart-2607178_1920.jpg" alt="Image of a heart imitation">
+                    </div>
                     <p class="text_white">Biology and Medicine</p>
                 </a>
-                <a href="/events_and_exhibits.html" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203232.png" alt="Night in the Museum image"></div>
+                <a href="/events_and_exhibits.html#robotics_and_AI" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203232.png" alt="Image of a robot">
+                    </div>
                     <p class="text_white">Robotics and AI</p>
                 </a>
-                <a href="/events_and_exhibits.html" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203354.png" alt="Visiting Professor of Aeronautics image"></div>
+                <a href="/events_and_exhibits.html#ecology" class="productbox">
+                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203354.png"
+                            alt="Image of bottom vegetation"></div>
                     <p class="text_white">Ecology</p>
                 </a>
             </div>
-            <div class="space"><a href="/events_and_exhibits.html#ee_exhibits" class="button b_green">Find out more</a></div>
+            <div class="space"><a href="/events_and_exhibits.html#exhibition_spaces" class="button b_green">Find out
+                    more</a></div>
         </section>
     </main>
     <footer>
-        <div  class="content_wrap">
-            <div class="f_boxes">
+        <div class="content_wrap">
+            <div class="grid3fit">
                 <div class="f_boxes_f">
                     <div class="csm_i">
                         <p>Community Science Museum</p>
@@ -137,49 +158,94 @@
                     </div>
                     <div class="open_hours">
                         <p class="bold">Opening hours:</p>
-                        <div class="item"><p class="item_l">Monday:</p><p class="ho_day_t">Closed</p></div>
-                        <div class="item"><p class="item_l">Tuesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                        <div class="item"><p class="item_l">Wednesday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                        <div class="item"><p class="item_l">Thursday:</p><p class="ho_day_t">10:00 – 16:00</p></div>
-                        <div class="item"><p class="item_l">Friday:</p><p class="ho_day_t">10:00 – 19:00</p></div>
-                        <div class="item"><p class="item_l">Saturday:</p><p class="ho_day_t">9:00 – 16:00</p></div>
-                        <div class="item"><p class="item_l">Sunday:</p><p class="ho_day_t">9:00 – 13:00</p></div>  
-                    </div>  
+                        <div class="item">
+                            <p class="item_l">Monday:</p>
+                            <p class="ho_day_t">Closed</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Tuesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Wednesday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Thursday:</p>
+                            <p class="ho_day_t">10:00 – 16:00</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Friday:</p>
+                            <p class="ho_day_t">10:00 – 19:00</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Saturday:</p>
+                            <p class="ho_day_t">9:00 – 16:00</p>
+                        </div>
+                        <div class="item">
+                            <p class="item_l">Sunday:</p>
+                            <p class="ho_day_t">9:00 – 13:00</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="f_boxes_f">
-                    <div class="contact_us"><p class="bold">Contact us:</p>
+                    <div class="contact_us">
+                        <p class="bold">Contact us:</p>
                         <p class="item">Phone: +47 38373635</p>
                         <p class="item">E-mail: CSMuseum@museum.com</p>
                     </div>
                     <div class="social_media">
-                        <a href="/"><figure class="instagram image"></figure></a>
-                        <a href="/"><figure class="facebook image"></figure></a>
+                        <a href="/">
+                            <figure class="instagram image"></figure>
+                        </a>
+                        <a href="/">
+                            <figure class="facebook image"></figure>
+                        </a>
                     </div>
                 </div>
                 <div class="f_boxes_f links links_f">
-                    <a href=""><p class="item">Events and Exhibits</p></a>
-                    <a href=""><p class="item">Get involed</p></a>
-                    <a href=""><p class="item">Explore</p></a>
-                    <a href=""><p class="item">Prices</p></a>
-                    <a href=""><p class="item">Accessibility</p></a>
-                    <a href=""><p class="item">Shop</p></a>
-                    <a href=""><p class="item">Food and drink</p></a>   
+                    <a href="">
+                        <p class="item">Events and Exhibits</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Get involed</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Explore</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Prices</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Accessibility</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Shop</p>
+                    </a>
+                    <a href="">
+                        <p class="item">Food and drink</p>
+                    </a>
                 </div>
                 <div class="f_boxes_f">
                     <form action="post" class="center_n">
                         <div class="newsletter">
                             <legend>Subscribe to our newsletter</legend>
                             <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                            <label for="email"><input type="email" id="email" name="email" placeholder="Email" required></label>
+                            <label for="email"><input type="email" id="email" name="email" placeholder="Email"
+                                    required></label>
                             <div>
-                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy statement</a></label>
+                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox"
+                                        id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy
+                                        statement</a></label>
                             </div>
                         </div>
-                        <button class="news_b"><input type="submit" value="Subscribe" class="button b_green send_b" ></button>
+                        <button class="news_b"><input type="submit" value="Subscribe"
+                                class="button b_green send_b"></button>
                     </form>
                 </div>
             </div>
         </div>
     </footer>
 </body>
+
 </html>
