--- a/information.html
+++ b/information.html
@@ -19,7 +19,7 @@
 
 <body>
     <header class="sticky_header">
-        <div class="header_logo"></div>
+        <a href="/index.html" class="header_logo"></a>
         <div class="floating_nav">
             <input type="checkbox" name="menu_checkbox" id="menu_checkbox">
             <label for="menu_checkbox" class="hamburger_icon" aria-label="Navigation menu"></label>
@@ -91,7 +91,7 @@
                         are 70 NOK per person and include a handy printed guide of the museum.</p>
                     <p class="fontsize1_1rem">If you would like to organise a guided tour for your group of 6 or more
                         people, please contact us to arrange the tour.</p>
-                    <div class="padding-top2rem"><a href="/about_us.html" class="button b_green">Contact us here</a>
+                    <div class="padding-top2rem"><a href="/contact_us.html" class="button b_green">Contact us here</a>
                     </div>
                 </div>
                 <div class="boxmargin white_background padding1rem g_four">
@@ -100,31 +100,31 @@
                     </div>
                     <h4 class="fontsize1_1rem">News:</h4>
                     <div class="f_boxes_f links">
-                        <a href="">
+                        <a href="/events_and_exhibits.html#Professor_of_aeronautics">
                             <p class="item fontsize1_1rem">Visiting Professor of Aeronautics</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#night_in_the_museum">
                             <p class="item fontsize1_1rem">Night in the museum</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#energetica_echibiton_on_loan">
                             <p class="item fontsize1_1rem">Energetica Echibiton on Loan</p>
                         </a>
                     </div>
                     <h3 class="fontsize1_1rem">Exhibits:</h3>
                     <div class="f_boxes_f links">
-                        <a href="">
+                        <a href="/events_and_exhibits.html#cosmology">
                             <p class="item fontsize1_1rem">Cosmology</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#evolution">
                             <p class="item fontsize1_1rem">Evolution</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#biology_and_medicine">
                             <p class="item fontsize1_1rem">Biology and Medicine</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#robotics_and_AI">
                             <p class="item fontsize1_1rem">Robotic and AI</p>
                         </a>
-                        <a href="">
+                        <a href="/events_and_exhibits.html#ecology">
                             <p class="item fontsize1_1rem">Ecology</p>
                         </a>
                     </div>
@@ -185,7 +185,7 @@
     </main>
     <footer>
         <div class="content_wrap">
-            <div class="f_boxes">
+            <div class="grid3fit">
                 <div class="f_boxes_f">
                     <div class="csm_i">
                         <p>Community Science Museum</p>
