Making/fixing responsiveness

--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -50,7 +50,7 @@
                         Technology will be delivering 3 lectures on the development of and where the future lies in this
                         exciting ‘space’.</p>
                     <div class="newsbox_img">
-                        <p class=" b_green text_white event_date">22.09.23</p>
+                        <p class=" b_green text_white event_date">22.09.23 - 18:00</p>
                         <div class="product_img">
                             <img src="images/plane.png" alt="Visiting Professor of Aeronautics image">
                         </div>
@@ -62,7 +62,7 @@
                         and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring
                         the wonders of science.</p>
                     <div class="newsbox_img">
-                        <p class=" b_green text_white event_date">04.10.23</p>
+                        <p class=" b_green text_white event_date">04.10.23 - 19:00</p>
                         <div class="product_img"><img src="images/roberto-nickson-396152.jpg"
                                 alt="Night in the Museum image"></div>
                     </div>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="exhibitbox" id="biology_and_medicine">
-                    <div class="remarea">
+                    <div class="remarea padding1rem">
                         <h3 class="title">Biology and Medicine</h3>
                     </div>
                     <p>From micro-organisms to the human body, major breakthroughs in biology are offering us unique
@@ -164,8 +164,9 @@
                     </div>
                 </div>
             </div>
-            <div class="images celso"></div>
         </section>
+        <div class="space"><a href="/information.html" class="button b_blue fontsize1_1rem">Go to information page</a></div>
+            <div class="images celso"></div>
     </main>
     <footer>
         <div class="content_wrap">
