--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="triangle"></div>
             </div>
             <div class="triobuttons">
-                <a href="/information.html" class="button b_green triobutton">Prices</a>
+                <a href="/information.html#prices_i_p" class="button b_green triobutton">Prices</a>
                 <a href="/information.html" class="button b_green triobutton">Opening hours</a>
                 <a href="/events_and_exhibits.html" class="button b_green triobutton">Events and Exhibits</a>
             </div>
