--- a/information.html
+++ b/information.html
@@ -82,7 +82,7 @@
                     <p class="fontsize1_1rem">The museum has wheelchair accessibility ramps. It also has audio guides
                         and braille display signs for the visually impaired.</p>
                 </div>
-                <div class="boxmargin white_background padding1rem g_three">
+                <div class="boxmargin white_background padding1rem g_three" id="prices_i_p">
                     <div class="green_underline">
                         <h2 class="bold big_title">PRICES</h2>
                     </div>
@@ -171,7 +171,7 @@
                     <h3 class="green_underline w_100">Internship</h3>
                     <p>Are you interested in working in a museum? Do you enjoy the fun and excitement of sharing the wonders of nature with people? Well you could be just the right person to enjoy an internship at the museum.</p>
                     <p>You’ll be learning from a number of different academics and people who are passionate about science and sharing it with the wider community. </p>
-                    <div class="padding-top2rem"><a href="/about_us.html" class="button b_green">Contact us here</a>
+                    <div class="padding-top2rem"><a href="/contact_us.html" class="button b_green">Contact us here</a>
                     </div>
                 </div>
                 <div>
