--- a/about_us.html
+++ b/about_us.html
@@ -42,15 +42,15 @@
                 <h1>About us</h1>
             </div>
         </section>
-        <section class="section_padding content_wrap padding-top2rem">
+        <section class="section_padding content_wrap padding-top2rem" id="about_us_section">
             <div class="grid3fit padding1rem gridcenter flexcenter">
-                <div class="about_us_text flexcenter1">
+                <div class="about_us_text">
                     <p>Over the course of human history, science has developed from our early understanding of fire, wind, water, and earth to exploring everything from galaxies far away to the very building blocks of life itself.</p>
                     <p>The aim of our museum is to create a space where everyone can experience the wonders of our discoveries and perhaps even ignite a lifelong passion to continue the exploration of the world around us.</p>
                     <p>We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to life (apart from the dinosaur exhibits – they only come to life at night when everyone’s gone home).</p>
                 </div>
-                <div>
-                    <div class="info_img flexcenter1">
+                <div class="image">
+                    <div class="info_img">
                         <img class="images" src="images/exhibition-1863344_1920.jpg" alt="Image from inside a museum">
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="triangle"></div>
             </div>
             <div class="triobuttons">
-                <a href="/information.html" class="button b_green triobutton">Prices</a>
+                <a href="/information.html#prices_i_p" class="button b_green triobutton">Prices</a>
                 <a href="/information.html" class="button b_green triobutton">Opening hours</a>
                 <a href="/events_and_exhibits.html" class="button b_green triobutton">Events and Exhibits</a>
             </div>
