--- a/contact_us.html
+++ b/contact_us.html
@@ -42,9 +42,9 @@
                 <h1>Contact us</h1>
             </div>
         </section>
-        <section class="section_padding content_wrap padding-top2rem ">
+        <section class="section_padding content_wrap padding-top2rem " id="contact_us_section">
             <div class="grid3fit padding1rem gridcenter flexcenter">
-                <div>
+                <div class="contact_us_text">
                     <div class="padding1rem">
                         <p>You can get in touch with us at:</p>
                         <div class="contact_us">
@@ -54,7 +54,7 @@
                     </div>
                     <div class="padding1rem">
                         <p>Or you can send us a message here:</p>
-                        <form class="message_area id="message_area" method="post" enctype="text/plain">
+                        <form class="message_area id=" message_area" method="post" enctype="text/plain">
                             <div class="message_input flex_spacebetween gap1rem">
                                 <div class="w_100">
                                     <label for="name">Name</label>
@@ -62,22 +62,25 @@
                                 </div>
                                 <div class="w_100">
                                     <label for="email">E-mail</label>
-                                    <input class="w_100" type="email" name="email" id="email" placeholder="Your email" required>
+                                    <input class="w_100" type="email" name="email" id="email" placeholder="Your email"
+                                        required>
                                 </div>
                             </div>
                             <div>
                                 <label for="title">Message title</label>
-                                <input class="w_100" type="text" name="title" id="title" placeholder="Message title" required>
+                                <input class="w_100" type="text" name="title" id="title" placeholder="Message title"
+                                    required>
                             </div>
                             <label for="message">Your message</label>
-                            <textarea class="w_100" name="message" id="message" cols="20" rows="5" placeholder="Your message" required></textarea>
+                            <textarea class="w_100" name="message" id="message" cols="20" rows="5"
+                                placeholder="Your message" required></textarea>
                             <div class="submit_area">
                                 <input class="button b_green" type="submit" name="Submit" value="Send message">
                             </div>
                         </form>
                     </div>
                 </div>
-                <div>
+                <div class="image">
                     <div class="contact_img">
                         <img class="images" src="images/mavis-cw-164128.jpg" alt="Image from inside a museum">
                     </div>
