--- a/visit_us.html
+++ b/visit_us.html
@@ -133,7 +133,7 @@
         </div>
         <section class="visitus_page section_padding" id="explore_section">
             <h2 class="header_titlebox b_blue">Explore</h2>
-            <div class="gridefit content_wrap">
+            <div class="flexwrap content_wrap">
                 <div class="eplore_spes flex_spacebetween" id="for_kids">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Kids</h3>
@@ -144,7 +144,7 @@
                         <p>Are you a young person looking to learn more about science? Come on down to our museum, there’s plenty to see and do.</p>
                         <p>You can learn about Newtonian physics from our bumper swing, or why not travel back in time and meet our resident Woolly Mammoth? Our exhibits are designed to be accessible for interested minds, so make sure you come ready to learn and explore.</p>
                         <p>We also have the Young Stars club which meets once a week on a Saturday between 10:00 and 13:00 where you’ll get to explore and experiment with our team of experts.</p>
-                        <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join, send us a message.</p>
+                        <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join,<a href="/contact_us.html"> send us a message.</a></p>
                     </div>
                 </div>
                 <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_teachers">
@@ -157,6 +157,9 @@
                     <div class="group_info padding1rem">
                         <p>As a community-driven museum, we want to work with schools to create places of learning and exploring. Our team are on hand to give your students guided tours of the museum, teach them in our learning laboratory, and provide great video presentations that will excite and inspire them.</p>
                         <p>Please get in touch with us here to find out more about our facilities and to arrange a time to bring your students through for a visit.</p>
+                        <div class="boxmargin padding1rem visit_g_four">
+                            <a href="/contact_us.html" class="button b_green">Contact us here</a>
+                        </div>
                     </div>
                 </div>
                 <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_reserchers">
@@ -169,6 +172,9 @@
                     </div>
                     <div class="group_info padding1rem">
                         <p>Are you looking to get involved with our team of researchers and academics? Our museum offers various ways for you to use our resources and contribute towards them. We have online records, laboratory space, and a working relationship with a number of universities around the country.</p>
+                        <div class="boxmargin padding1rem visit_g_four">
+                            <a href="/visit_us.html#for_reserchers" class="button b_green">Reserchers page</a>
+                        </div>
                     </div>
                 </div>
             </div>
