--- a/events_and_exhibits.html
+++ b/events_and_exhibits.html
@@ -112,7 +112,7 @@
                         our Woolly Mammoth, the Dodos, and a number of dinosaurs too.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/Skjermbilde 2023-08-23 203024.png" alt="Image of people">
+                            <img src="images/evolution.png" alt="Image of people">
                         </div>
                     </div>
                 </div>
@@ -146,7 +146,7 @@
                         the latest exploration of the planets in our solar system.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/Skjermbilde 2023-08-23 203232.png" alt="Image of a robot">
+                            <img src="images/robot.png" alt="Image of a robot">
                         </div>
                     </div>
                 </div>
@@ -159,7 +159,7 @@
                         the whole planet.</p>
                     <div class="newsbox_img">
                         <div class="product_img">
-                            <img src="images/Skjermbilde 2023-08-23 203354.png" alt="Image of bottom vegetation">
+                            <img src="images/ecology.png" alt="Image of bottom vegetation">
                         </div>
                     </div>
                 </div>
