--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="header_text_h">
                 <h1>Community<br>Science Museum</h1>
                 <div class="headerline"></div>
-                <p class="header_p text_white">Explore Together</p>
+                <h2 class="header_p text_white">Explore Together</h2>
             </div>
         </section>
         <div class="section_buttons">
@@ -98,17 +98,20 @@
                 <a href="/visit_us.html#for_kids" class="explore_box">
                     <h3 class="button gray explore_text text_black">For Kids</h3>
                     <figure class="black_square"></figure>
-                    <div class="product_img"><img src="/images/samuel-zeller-158996.jpg" alt="Image of a kid"></div>
+                    <div class="product_img"><img src="/images/samuel-zeller-158996.jpg"
+                            alt="Image of a kid - For kids"></div>
                 </a>
                 <a href="/visit_us.html#for_teachers" class="explore_box">
                     <h3 class="button gray explore_text text_black">For Teachers</h3>
                     <figure class="black_square"></figure>
-                    <div class="product_img"><img src="/images/learning.png" alt="Image of a kid and a teacher"></div>
+                    <div class="product_img"><img src="/images/learning.png"
+                            alt="Image of a kid and a teacher - For Teachers"></div>
                 </a>
                 <a href="/visit_us.html#for_reserchers" class="explore_box">
                     <h3 class="button gray explore_text text_black">Researchers</h3>
                     <figure class="black_square"></figure>
-                    <div class="product_img"><img src="/images/people-219985_1280.jpg"" alt=" Image of a Researcher">
+                    <div class="product_img"><img src="/images/people-219985_1280.jpg"
+                            alt=" Image of a Researcher - For researchers">
                     </div>
                 </a>
             </div>
@@ -124,7 +127,7 @@
                     <p class="text_white">Cosmology</p>
                 </a>
                 <a href="/events_and_exhibits.html#evolution" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203024.png" alt="Image of people">
+                    <div class="product_img"><img src="images/evolution.png" alt="Image of people">
                     </div>
                     <p class="text_white">Evolution</p>
                 </a>
@@ -134,13 +137,12 @@
                     <p class="text_white">Biology and Medicine</p>
                 </a>
                 <a href="/events_and_exhibits.html#robotics_and_AI" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203232.png" alt="Image of a robot">
+                    <div class="product_img"><img src="images/robot.png" alt="Image of a robot">
                     </div>
                     <p class="text_white">Robotics and AI</p>
                 </a>
                 <a href="/events_and_exhibits.html#ecology" class="productbox">
-                    <div class="product_img"><img src="images/Skjermbilde 2023-08-23 203354.png"
-                            alt="Image of bottom vegetation"></div>
+                    <div class="product_img"><img src="images/ecology.png" alt="Image of bottom vegetation"></div>
                     <p class="text_white">Ecology</p>
                 </a>
             </div>
@@ -149,100 +151,96 @@
         </section>
     </main>
     <footer>
-        <div class="content_wrap">
-            <div class="grid3fit">
-                <div class="f_boxes_f">
-                    <div class="csm_i">
-                        <p>Community Science Museum</p>
-                        <p>Verket 1 2580 Folldal</p>
+        <div class="gridfit250 content_wrap">
+            <div class="f_boxes_f">
+                <div class="csm_i">
+                    <p>Community Science Museum</p>
+                    <p>Verket 1 2580 Folldal</p>
+                </div>
+                <div class="open_hours">
+                    <p class="bold">Opening hours:</p>
+                    <div class="item">
+                        <p class="item_l">Monday:</p>
+                        <p class="ho_day_t">Closed</p>
                     </div>
-                    <div class="open_hours">
-                        <p class="bold">Opening hours:</p>
-                        <div class="item">
-                            <p class="item_l">Monday:</p>
-                            <p class="ho_day_t">Closed</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Tuesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Wednesday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Thursday:</p>
-                            <p class="ho_day_t">10:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Friday:</p>
-                            <p class="ho_day_t">10:00 – 19:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Saturday:</p>
-                            <p class="ho_day_t">9:00 – 16:00</p>
-                        </div>
-                        <div class="item">
-                            <p class="item_l">Sunday:</p>
-                            <p class="ho_day_t">9:00 – 13:00</p>
-                        </div>
+                    <div class="item">
+                        <p class="item_l">Tuesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Wednesday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Thursday:</p>
+                        <p class="ho_day_t">10:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Friday:</p>
+                        <p class="ho_day_t">10:00 – 19:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Saturday:</p>
+                        <p class="ho_day_t">9:00 – 16:00</p>
+                    </div>
+                    <div class="item">
+                        <p class="item_l">Sunday:</p>
+                        <p class="ho_day_t">9:00 – 13:00</p>
                     </div>
                 </div>
-                <div class="f_boxes_f">
-                    <div class="contact_us">
-                        <p class="bold">Contact us:</p>
-                        <p class="item">Phone: +47 38373635</p>
-                        <p class="item">E-mail: CSMuseum@museum.com</p>
-                    </div>
-                    <div class="social_media">
-                        <a href="/">
-                            <figure class="instagram image"></figure>
-                        </a>
-                        <a href="/">
-                            <figure class="facebook image"></figure>
-                        </a>
-                    </div>
+            </div>
+            <div class="f_boxes_f">
+                <div class="contact_us">
+                    <p class="bold">Contact us:</p>
+                    <p class="item">Phone: +47 38373635</p>
+                    <p class="item">E-mail: CSMuseum@museum.com</p>
                 </div>
-                <div class="f_boxes_f links links_f">
-                    <a href="">
-                        <p class="item">Events and Exhibits</p>
+                <div class="social_media">
+                    <a href="/">
+                        <figure class="instagram image"></figure>
                     </a>
-                    <a href="">
-                        <p class="item">Get involed</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Explore</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Prices</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Accessibility</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Shop</p>
-                    </a>
-                    <a href="">
-                        <p class="item">Food and drink</p>
+                    <a href="/">
+                        <figure class="facebook image"></figure>
                     </a>
                 </div>
-                <div class="f_boxes_f">
-                    <form action="post" class="center_n">
-                        <div class="newsletter">
-                            <legend>Subscribe to our newsletter</legend>
-                            <label for="name"><input type="text" id="name" name="name" placeholder="Name"></label>
-                            <label for="email"><input type="email" id="email" name="email" placeholder="Email"
-                                    required></label>
-                            <div>
-                                <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox"
-                                        id="Accept_p_s" name="Accept_p_s">Accept <a href="/">privacy
-                                        statement</a></label>
-                            </div>
+            </div>
+            <div class="f_boxes_f links links_f">
+                <a href="">
+                    <p class="item">Events and Exhibits</p>
+                </a>
+                <a href="">
+                    <p class="item">Get involed</p>
+                </a>
+                <a href="">
+                    <p class="item">Explore</p>
+                </a>
+                <a href="">
+                    <p class="item">Prices</p>
+                </a>
+                <a href="">
+                    <p class="item">Accessibility</p>
+                </a>
+                <a href="">
+                    <p class="item">Shop</p>
+                </a>
+                <a href="">
+                    <p class="item">Food and drink</p>
+                </a>
+            </div>
+            <div class="f_boxes_f">
+                <form action="post" class="center_n newsletter">
+                        <legend>Subscribe to our newsletter</legend>
+                        <input type="text" id="name" name="name" placeholder="Name">
+                        <input type="email" id="email" name="email" placeholder="Email"
+                                required>
+                        <div>
+                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s"
+                                    name="Accept_p_s">Accept <a href="/">privacy
+                                    statement</a></label>
                         </div>
-                        <button class="news_b"><input type="submit" value="Subscribe"
-                                class="button b_green send_b"></button>
-                    </form>
-                </div>
+                    <button class="news_b"><input type="submit" name="submit" value="Subscribe"
+                            class="button b_green send_b"></button>
+                </form>
             </div>
         </div>
     </footer>
