--- a/information.html
+++ b/information.html
@@ -155,7 +155,7 @@
                         soft drinks, coffee, snacks and more.</p>
                 </div>
                 <div class="info_img border_blue">
-                    <img class="images" src="images/Skjermbilde 2023-08-25 110429.png" alt="Image from a store">
+                    <img class="images" src="images/cafe.png" alt="Image from a cafe">
                 </div>
             </div>
         </div>
