--- a/visit_us.html
+++ b/visit_us.html
@@ -133,8 +133,8 @@
         </div>
         <section class="visitus_page section_padding" id="explore_section">
             <h2 class="header_titlebox b_blue">Explore</h2>
-            <div class="flexwrap content_wrap">
-                <div class="eplore_spes flex_spacebetween" id="for_kids">
+            <div class="flex_spacebetween content_wrap">
+                <div class="flex_spacebetween" id="for_kids">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Kids</h3>
                         <figure class="black_square"></figure>
@@ -147,7 +147,7 @@
                         <p>During the school holidays we run special holiday clubs where you can join other children your age to go on a journey of discovery. Each holiday we pick a new theme to explore. To find out more about the holiday club and how you can join,<a href="/contact_us.html"> send us a message.</a></p>
                     </div>
                 </div>
-                <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_teachers">
+                <div class="flex_spacebetween padding-top2rem" id="for_teachers">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">For Teachers</h3>
                         <figure class="black_square"></figure>
@@ -162,7 +162,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="eplore_spes flex_spacebetween padding-top2rem" id="for_reserchers">
+                <div class="flex_spacebetween padding-top2rem" id="for_reserchers">
                     <div class="explore_box">
                         <h3 class="button gray explore_text text_black">Researchers</h3>
                         <figure class="black_square"></figure>
@@ -216,7 +216,7 @@
     </main>
     <footer>
         <div class="content_wrap">
-            <div class="grid3fit">
+            <div class="grid3fill">
                 <div class="f_boxes_f">
                     <div class="csm_i">
                         <p>Community Science Museum</p>
