--- a/index.html
+++ b/index.html
@@ -229,17 +229,17 @@
             </div>
             <div class="f_boxes_f">
                 <form action="post" class="center_n newsletter">
-                        <legend>Subscribe to our newsletter</legend>
+                        <p>Subscribe to our newsletter</p>
                         <input type="text" id="name" name="name" placeholder="Name">
                         <input type="email" id="email" name="email" placeholder="Email"
                                 required>
                         <div>
-                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="Accept_p_s"
+                            <label for="checkbox" class="l_c"><input class="checkbox" type="checkbox" id="checkbox"
                                     name="Accept_p_s">Accept <a href="/">privacy
                                     statement</a></label>
                         </div>
-                    <button class="news_b"><input type="submit" name="submit" value="Subscribe"
-                            class="button b_green send_b"></button>
+                    <label class="news_b"><input type="submit" name="submit" value="Subscribe"
+                            class="button b_green send_b"></label>
                 </form>
             </div>
         </div>
